--- a/src/css/main.css
+++ b/src/css/main.css
@@ -63,12 +63,14 @@ header {
   float: right;
 }
 
-.addButton {
+.addButton,
+.removeButton {
   width: 50px;
   height: 33px;
   font-size: 1em;
 }
 
-.addButton:active {
+.addButton:active,
+.removeButton:active {
   background-color: #ccc;
 }
