--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,10 @@ ul {
   list-style-type: none;
 }
 
+p {
+  line-height: 1;
+}
+
 button {
   border: none;
   outline: 0;
@@ -63,20 +67,32 @@ header {
 }
 
 .listItem {
-  border: 1px solid #000;
-  padding: 10px;
-  margin: 10px auto;
+  color: #222;
+  background: linear-gradient(to bottom, #87e0fd 0%,#53cbf1 40%,#05abe0 100%);
+  position: relative;
+  margin: 0 auto 5px;
+  padding: 5px 10px;
 }
 
-.addButtonSpan {
-  float: right;
+.itemName {
+  margin-right: 40px;
+  word-wrap: break-word;
 }
+
+/*.buttonSpan {
+  float: right;
+}*/
 
 .addButton,
 .removeButton {
+  position: absolute;
+  right: 0px;
+  top: 0;
   width: 50px;
   height: 33px;
   font-size: 1em;
+  border-radius: 0 0 0 10px;
+  box-shadow: -3px 3px 5px;
 }
 
 .addButton:active,
